[package]
name = "rstf"
version = "1.0.0"
edition = "2021"
author = "William Nathanael"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
chacha20poly1305 = { version = "0.10", features = ["stream", "std"] }
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
rpassword = "7.0"
tar = "0.4"
zstd = { version = "0.13", features = ["zstdmt"] }
zeroize = "1.7"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
console = "0.15"
num_cpus = "1.16"
sha2 = "0.10"
